--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        <img src="media/obama.gif" />
+    <body style="background-image:url('media/explosion.gif'),url('media/falling-money.gif');">
+        <div style="width:100%;margin:auto;text-align:center">
+            <img style="align-self:center" src="media/obama.gif" width="20%" />
+            <audio src="media/audio.mp3" autoplay>
+        </div>
     </body>
 </html>
